--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -9,7 +9,7 @@ body{
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url("../img/productos/bg-6.jpg");
+    background-image: url("../img/productos/fondo-textura-carrito.jpg");
 }
 li {
     list-style: none;
