--- a/site/views/carrito.html
+++ b/site/views/carrito.html
@@ -42,7 +42,6 @@
             <ul class="user">
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Registro</a></li>
-                <li><a href="/carrito">Carrito</a> </li>
             </ul>
 
             <!-- <div class="t-f">
@@ -63,7 +62,7 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
@@ -81,7 +80,7 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
@@ -99,11 +98,11 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
-                        <button type="button" class="btnAñadir">- 1 +</i></button>
+                        <button type="button" class="btnAñadir">- 2 +</i></button>
                             <button class="trash"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
@@ -117,11 +116,11 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
-                        <button type="button" class="btnAñadir">- 1 +</i></button>
+                        <button type="button" class="btnAñadir">- 3 +</i></button>
                             <button class="trash"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
@@ -135,7 +134,7 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada pero de bajo amargor. 4% v/v</p>
+                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
@@ -145,6 +144,10 @@
                 </div>
             </div>
         </section>
+        <div class="end">
+            <button type="button">Finalizar compra</button>
+            <input type="text" placeholder="$4400">
+        </div>
     </main>
     <footer>
         <section>
