--- a/site/public/css/header.css
+++ b/site/public/css/header.css
@@ -31,6 +31,7 @@
 
 .header .carrito{
     font-size: 40px;
+    cursor: pointer;
 }
 .header .flex {
     display: flex;
@@ -44,6 +45,9 @@
     padding: 5px;
 }
 .buscar input{
+    position:absolute;
+    right: -145px;
+    top: -24px;
     width: 0px;
     height: 45px;
     padding: 0 20px;
@@ -52,12 +56,12 @@
     outline: none;
     border: 1px solid silver;
     border-radius: 30px;
-    transition: all 0.6s ease;
+    transition: all 0.8s ease;
 }
 .btn{
     position: absolute;
-    top: 0;
-    right: 5px;
+    top: -25px;
+    right: -150px;
     background: #000;
     width: 55px;
     height: 55px;
