--- a/site/public/css/carrito.css
+++ b/site/public/css/carrito.css
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     width: 90%;
+    max-width: 1080px;
     border: solid 2px white;
     border-radius: 20px;
     padding: 20px;
@@ -20,10 +21,11 @@ main h2{
 
 .main .contGen{
     width: 100%;
-    height: 200px;
+    height: 300px;
+    background-color: rgba(230, 230, 230, 0.5);
     display: flex;
     border: solid 2px gray;
-    border-radius: 20px;
+    border-radius: 30px 0;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -47,9 +49,6 @@ main h2{
     width: 6%;
     min-width: 70px;
 }
-.main .contGen .contGrid .producto .info{
-    display: flex;
-}
 .main .contGen .contGrid .producto .imgcCont img{
     display: flex;
     object-fit: cover;
@@ -60,7 +59,7 @@ main h2{
 
 }
 .main .contGrid .contenido{
-    width: 50%;
+    width: 68%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -75,6 +74,7 @@ main h2{
 .main .contGrid .producto .info{
     display: flex;
     flex-direction: column;
+    margin: 10px;
 }
 .main .contGrid .producto .info button{
     height: 45px;
@@ -92,7 +92,7 @@ padding: 10px;
 }
 .main .end{
     padding: 2px;
-    margin: 20px;
+    margin: 20px 0;
 }
 .main .end button{
     color: white;
@@ -102,6 +102,15 @@ padding: 10px;
     cursor: pointer;
 }
 .main .end input{
-    font-size: 20px;
+    font-size: 18px;
     padding: 5px;
+    width: 157px;
+}
+@media (min-width:615px){
+    .main .contGen{
+        height: 200px;
+    }
+    .main .contGrid .producto .info{
+        margin: 0;
+    }
 }
