--- a/site/public/css/footer.css
+++ b/site/public/css/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: orange;
+    background-color: #d6651fd1;
     margin: 20px auto 0;
     border-radius: 40px 40px 0 0;
     width: 98%;
