--- a/site/views/login.html
+++ b/site/views/login.html
@@ -15,11 +15,11 @@
     <header>
         <div class="logo"><a href="/"><img src="../img/logo/logo-beerbar.png" alt="logo"></a></div>
         
-        <nav>
+        <nav>   
             <ul>
                 <li><i class="fa-solid fa-cart-shopping"></i></li>
                 <li><i class="fa-solid fa-bars"></i></li>
-            </ul> 
+            </ul>  
         </nav>
     </header>
     <main>
@@ -28,10 +28,14 @@
             <div class="container">
                 <label for="user">Usuario</label>
                 <input type="text" name="user" id="user" placeholder="Ingresar Nombre de Usuario">
+                <small>"Obligatorio"</small>
+                <small>"Usuario incorrecto"</small>
             </div>
             <div class="container">
                 <label for="pass">Contraseña</label>
                 <input type="password" name="pass" id="pass" placeholder="Ingresar Contraseña">
+                <small>"Obligatorio"</small>
+                <small>"Contraseña incorrecta"</small>
             </div>
             <div class="login_button">
                 <button class="one"><i class="fa-solid fa-right-to-bracket"></i> Login</button>
