--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -3,14 +3,9 @@
     /* background-color: black; */
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
-    position: static;
-}
-.login main{
-    background-color: rgba(255, 255, 255, 0.178);
-    padding: 20px 20px 199px;
-    border: 2px double black;
-    border-radius: 20px;
+    position: relative;
 }
 .login header .logo img{
     width: 65%;
@@ -21,13 +16,19 @@
     font-size: 40px;
     margin: 10px;
     padding: 0;
+    color: var(--colorBlanco);
 }
+
 .login header nav ul li{
     margin-right: 10px;
 }
 
 /* main */
 .login main{
+    background-color: rgba(255, 255, 255, 0.178);
+    padding: 20px 20px 199px;
+    border: 2px double black;
+    border-radius: 20px;
     width: 335px;
     margin: 0 auto;
 }
@@ -44,6 +45,14 @@
 .login main .container label{
     font-size: 20px;
 }
+.login main .container input{
+    padding: 10px;
+    border-radius: 10px;
+}
+.login main .container small{
+    font-size: 16px;
+    color: red;
+}
 .login main .login_button{
     display: flex;
     flex-wrap: wrap;
@@ -51,13 +60,15 @@
     margin-top: 15px;
 }
 .login main .login_button button{
+    background-color: var(--colorButtom);
     display: flex;
     align-items: center;
     font-size: 18px;
     margin-bottom: 15px;
     padding: 0px 117px;
     border: 1px solid black;
-    border-radius: 4px;
+    border-radius: 10px;
+    width: 335px;
 }
 .login main .login_button .one{
     padding: 0px 120px;
@@ -71,6 +82,11 @@
 .login main .login_button button i{
     font-size: 40px;
     margin-right: 10px;
+}
+.login main .login_button button:hover{
+    background-color: var(--colorNaranja);
+    color: var(--colorBlanco);
+    transition: all 0.6s;
 }
 .login main .extra{
     display: flex;
@@ -93,7 +109,10 @@
         margin: 5px 0 0;
     }
     .login header nav{
-        display: none;
+        width: 120px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
     }
 
 }
