--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -4,16 +4,20 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    position: relative;
 }
 .register header .logo img{
     width: 65%;
     margin-left: 10px;
 }
-.register header ul{
+
+.register header nav ul{
     display: flex;
     font-size: 40px;
     margin: 10px;
     padding: 0;
+    color: var(--colorBlanco);
 }
 .register header ul li{
     margin-right: 10px;
@@ -42,21 +46,39 @@
 .register main .container label{
     font-size: 20px;
 }
+.register main .container label p{
+    width: 120px;
+    font-size: 16px;
+    margin: 0;
+    color: rgb(2 52 2);
+}
+.register main .container input{
+    padding: 10px;
+    border-radius: 10px;
+}
 .register main .container small{
     font-size: 16px;
     color: red;
 }
 .register main .registrarse button{
+    background-color: var(--colorButtom);
     display: flex;
     align-items: center;
     font-size: 18px;
     padding: 0px 117px;
     border: 1px solid black;
-    border-radius: 4px;
+    border-radius: 10px;
+    width: 335px;
+    margin: 0;
 }
 .register main .registrarse button i{
     font-size: 40px;
     margin-right: 10px;
+}
+.register main .registrarse button:hover{
+    background-color: var(--colorNaranja);
+    color: var(--colorBlanco);
+    transition: all 0.6s;
 }
 .register main div h4{
     font-size: 18px;
@@ -69,11 +91,18 @@
     align-items: center;
 }
 .register main .G button{
+    background-color: var(--colorButtom);
     font-size: 30px;
     margin: 0 10px;
     padding: 5px;
     border: 1px solid black;
     border-radius: 8px;
+    display: flex;
+}
+.register main .G button:hover{
+    background-color: blue;
+    color: var(--colorBlanco);
+    transition: all 0.6s;
 }
 
 /* tablet */
@@ -90,7 +119,10 @@
         margin: 5px 0 0;
     }
     .register header nav{
-        display: none;
+        width: 120px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
     }
 
 }
