--- a/site/public/css/variables.css
+++ b/site/public/css/variables.css
@@ -16,6 +16,8 @@
     --colorNaranja:rgb(219, 105, 12);
     --colorNaranjaClaro: #f8dda4;
     --colorNegro: black;
+    --colorBlanco: white;
+    --colorButtom:rgb(54, 49, 49);
 
     /* Fuentes */
     --fuentePrincipal: 'Bebas Neue', cursive;
