--- a/site/views/register.html
+++ b/site/views/register.html
@@ -15,6 +15,9 @@
         <div class="logo"><a href="/"><img src="../img/logo/logo-beerbar.png" alt="logo"></a></div>
 
         <nav>
+            <!-- <ul>
+                <li><a href="/login">Login</a></li>
+            </ul>    -->
             <ul>
                 <li><i class="fa-solid fa-cart-shopping"></i></li>
                 <li><i class="fa-solid fa-bars"></i></li>
@@ -37,16 +40,17 @@
             <div class="container">
                 <label for="pass">Contraseña</label>
                 <input type="password" name="pass" id="pass" placeholder="Ingresar Contraseña" required>
-                
-            </div>
-            <div class="container">
-                <input type="password" name="pass" placeholder="Repetir Contraseña" required>
                 <small>"Obligatorio"</small>
             </div>
             <div class="container">
-                <label for="contact">Nro de Contacto</label>
+                <input type="password" name="pass2" placeholder="Repetir Contraseña" required>
+                <small>"Obligatorio"</small>
+                <small>"Incorrecto</small>
+            </div>
+            <div class="container">
+                <label for="contact">Nro de Contacto <p>("No es obligatorio")</p></label>
                 <input type="number" name="contact" id="contact" placeholder="Ingresar Nro">
-                <small>"No es obligatorio"</small>
+                
             </div>
             <div class="registrarse">
                 <button><i class="fa-solid fa-user"></i> sign-up</button>
