--- a/site/views/carrito.html
+++ b/site/views/carrito.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
+                        <p>-cerveza lupulada de bajo amargor. 4%alc-</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
+                        <p>-cerveza lupulada de bajo amargor. 4%alc-</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
+                        <p>-cerveza lupulada de bajo amargor. 4%alc-</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
+                        <p>-cerveza lupulada de bajo amargor. 4%alc-</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
@@ -134,7 +134,7 @@
                     </div>
                     <div class="contenido">
                         <Strong>CITRA Session IPA</Strong>
-                        <p>cerveza lupulada de bajo amargor. 4%alc</p>
+                        <p>-cerveza lupulada de bajo amargor. 4%alc-</p>
                     </div>
                     <div class="info">
                         <p class="precio">$550</p>
