header con navegacion dentro de la hamburguesa

--- a/site/views/index.html
+++ b/site/views/index.html
@@ -27,7 +27,7 @@
             
             <div class="icons">
                 <button class="carrito">
-                   <i class="fa-solid fa-cart-shopping"></i>
+                <i class="fa-solid fa-cart-shopping"></i>
                 </button>
                 <button class="burger">
                     <i class="fa-solid fa-bars"></i>
@@ -38,8 +38,8 @@
         <nav>
             <ul>
                 <li><a href="/productos">Productos</a></li>
-                <!-- <li><a href="#">Empresa</a></li>
-                <li><a href="#">Ayuda</a></li> -->
+                <li><a href="#">Empresa</a></li>
+                <li><a href="#">Ayuda</a></li>
             </ul>
             <ul class="user">
                 <li><a href="/login">Login</a></li>
