--- a/site/views/index.html
+++ b/site/views/index.html
@@ -40,6 +40,7 @@
                 <li><a href="/productos">Productos</a></li>
                 <li><a href="#">Empresa</a></li>
                 <li><a href="#">Ayuda</a></li>
+                <li><a href="#">Locales</a></li>
             </ul>
             <ul class="user">
                 <li><a href="/login">Login</a></li>
